<resources>

    <string name="app_name">PatientTracker</string>

    <!-- Login Page -->
    <string name="tv_sign_in">Sign In!</string>
    <string name="button_sign_in">Sign In</string>
    <string name="tv_not_registered">Not Yet Registered?</string>
    <string name="button_sign_up">Sign Up</string>

    <!--Sign Up Page-->
    <string name="tv_email">E-mail Address *</string>
    <string name="tv_name">Name *</string>
    <string name="tv_username">Username *</string>
    <string name="tv_password">New Password *</string>
    <string name="tv_confirm_password">Confirm Password *</string>

    <!-- Main Activity Page -->
    <string name="tv_welcome_username">Welcome User!</string>
    <string name="tv_doctor_menu">Doctor\'s Menu</string>
    <string name="button_add_patient">Add a new Patient Profile</string>
    <string name="button_add_health_record">Add Health Record for Old Patient</string>
    <string name="button_search_name">Search By Patient Name</string>
    <string name="button_search_arrival">Search By Date of Appointment</string>
    <string name="title_activity_add_patient">Add Patient Details</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--AddHealthRecordActivity-->
    <string name="button_add_record">Add Health Record</string>
    <string name="tv_add_record">Enter registered E-Mail ID to entry a new health record</string>

    <!--SearchDateActivity-->
    <string name="button_search_date">Search</string>
    <string name="tv_search_date">Enter date of arrival of the Patient</string>

    <!--Contact and Health tabs-->
    <string-array name="blood_group">
        <item>O +</item>
        <item>O -</item>
        <item>A +</item>
        <item>A -</item>
        <item>B +</item>
        <item>B -</item>
        <item>AB +</item>
        <item>AB -</item>
    </string-array>

    <string name="tv_firstname">First Name *</string>
    <string name="tv_lastname">Last Name *</string>
    <string name="tv_gender">Sex</string>
    <string name="tv_mobile">Mobile No. *</string>
    <string name="tv_add_email">E-mail *</string>
    <string name="tv_address">Address</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="tv_age">Age</string>
    <string name="tv_blood_group">Blood Group</string>
    <string name="tv_condition">Condition</string>
    <string name="tv_medication">Medication</string>
    <string name="tv_note">Note/Remarks</string>
    <string name="tv_date_of_visit">Date of Visit</string>
    <string name="button_save">Save</string>

    <!--SearchNameActivity -->
    <string name="view_search">Search</string>
    <string name="action_bar_label">Search By Name</string>

    <!--HealthDetailsAdapter-->

    <string name="tv_patient_age">Age:</string>
    <string name="tv_patient_bloodGroup">Blood Group:</string>
    <string name="tv_patient_condition">Condition:</string>
    <string name="tv_patient_medication">Medication:</string>
    <string name="tv_patient_notes">Notes:</string>
    <string name="tv_patient_DateVisit">Date of Visit</string>

</resources>
