<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_age"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_blood_group"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_age"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_condition"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_blood_group"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_medication"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_note"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_medication"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_date_of_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_date_of_visit"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_note"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_age"
        android:layout_marginLeft="84dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="74dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinner" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="date"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        android:layout_marginLeft="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        android:layout_marginLeft="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:layout_marginLeft="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText6" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>