<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context="com.pratikm.PatientTracker.AddContactActivity">

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_firstname"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lastname"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstname"
        app:layout_constraintLeft_toLeftOf="@+id/tv_firstname" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_lastname"
        app:layout_constraintLeft_toLeftOf="@+id/tv_lastname" />

    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mobile"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        app:layout_constraintLeft_toLeftOf="@+id/tv_gender" />

    <TextView
        android:id="@+id/tv_addemail"
        android:layout_width="123dp"
        android:layout_height="17dp"
        android:text="@string/tv_email"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile"
        app:layout_constraintLeft_toLeftOf="@+id/tv_mobile"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_address"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_addemail"
        app:layout_constraintLeft_toLeftOf="@+id/tv_addemail" />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/tv_firstname"
        android:layout_marginLeft="36dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="36dp" />

    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/editText_firstname"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lastname"
        app:layout_constraintTop_toTopOf="@+id/tv_lastname" />

    <EditText
        android:id="@+id/editText_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="@+id/editText_lastname"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mobile"
        app:layout_constraintTop_toTopOf="@+id/tv_mobile" />

    <EditText
        android:id="@+id/editText_email_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/editText_mobile"
        app:layout_constraintBottom_toBottomOf="@+id/tv_addemail"
        app:layout_constraintTop_toTopOf="@+id/tv_addemail" />

    <EditText
        android:id="@+id/editText_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintLeft_toLeftOf="@+id/editText_email_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@+id/tv_address" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginTop="19dp"
        android:checkedButton="@+id/rb_female"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="@+id/editText_mobile"
        app:layout_constraintRight_toRightOf="@+id/editText_mobile"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastname">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:onClick="rbClick"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rb_male"
            android:onClick="rbClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save And Proceed"
        android:background="@drawable/mybutton"
        android:layout_marginTop="37dp"
        android:onClick="onClickSave"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_postal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



</android.support.constraint.ConstraintLayout>