<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pratikm.PatientTracker.SignUpActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText_name_signup"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name" />

    <EditText
        android:id="@+id/editText_email_signup"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_email_signup" />

    <TextView
        android:id="@+id/tv_username_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_username"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_email_signup" />

    <EditText
        android:id="@+id/editText_username_signup"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username_signup" />

    <TextView
        android:id="@+id/tv_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_username_signup"
        android:layout_marginLeft="-7dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username_signup" />

    <EditText
        android:id="@+id/editText_password_signup"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_signup" />

    <TextView
        android:id="@+id/tv_password_confirm_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirm_password"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_signup"
        android:layout_marginLeft="-7dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_signup" />

    <EditText
        android:id="@+id/editText_password_confirm_signup"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:inputType="textPassword"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_confirm_signup"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password_confirm_signup" />

    <Button
        android:id="@+id/button_sign_up_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up"
        android:onClick="onSignUpClick"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_confirm_signup"
        android:layout_marginLeft="86dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_password_confirm_signup" />





</android.support.constraint.ConstraintLayout>
