<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pratikm.PatientTracker.LoginActivty">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sign_in"
        android:textSize="52sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:hint="Enter E-mail Address"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPassword"
        android:hint="Enter Password"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginLeft="-9dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_in"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginLeft="96dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:text="@string/button_sign_up"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteX="252dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_not_registered"
        android:textSize="22sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText2" />

</android.support.constraint.ConstraintLayout>
