<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context="com.pratikm.PatientTracker.AddHealthActivity">

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_age"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_blood_group"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_age"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_condition"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_blood_group"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_medication"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_note"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_medication"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_date_of_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_date_of_visit"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_note"
        app:layout_constraintLeft_toLeftOf="@+id/tv_age" />

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="85dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@+id/tv_age"
        app:layout_constraintBottom_toBottomOf="@+id/tv_age"
        app:layout_constraintVertical_bias="0.375"
        app:layout_constraintLeft_toRightOf="@+id/tv_age"
        android:layout_marginLeft="83dp"
        android:layout_marginStart="83dp" />

    <Spinner
        android:id="@+id/spinner_blood"
        android:entries="@array/blood_group"
        android:layout_width="100dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_blood_group"
        app:layout_constraintTop_toTopOf="@+id/tv_blood_group"
        app:layout_constraintLeft_toRightOf="@+id/tv_blood_group"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />

    <EditText
        android:id="@+id/editText_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tv_condition"
        app:layout_constraintTop_toTopOf="@+id/tv_condition"
        app:layout_constraintVertical_bias="0.416"
        app:layout_constraintLeft_toRightOf="@+id/tv_condition"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp" />

    <EditText
        android:id="@+id/editText_visit_date"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        app:layout_constraintLeft_toRightOf="@+id/tv_date_of_visit"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_of_visit"
        app:layout_constraintTop_toTopOf="@+id/tv_date_of_visit" />

    <EditText
        android:id="@+id/editText_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_medication"
        app:layout_constraintTop_toTopOf="@+id/tv_medication"
        app:layout_constraintLeft_toRightOf="@+id/tv_medication"
        android:layout_marginLeft="34dp"
        app:layout_constraintVertical_bias="0.458"
        android:layout_marginStart="34dp" />

    <EditText
        android:id="@+id/editText_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_note"
        app:layout_constraintTop_toTopOf="@+id/tv_note"
        app:layout_constraintLeft_toRightOf="@+id/tv_note"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:background="@drawable/mybutton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_visit_date"
        android:onClick="onSaveClick"/>

</android.support.constraint.ConstraintLayout>
